--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,6 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
@@ -170,6 +173,7 @@ sticker(p, package="hexSticker", p_size=22, s_x=1, s_y=.75, s_width=1.3, s_heigh
 [<img src="https://github.com/lpantano/DEGreport/raw/master/inst/sticker/degreport.png" height="120"/>](https://github.com/lpantano/DEGreport)
 [<img src="https://raw.githubusercontent.com/villegar/dive/master/inst/images/logo.png" height="120"/>](https://github.com/villegar/dive)
 [<img src="https://github.com/tbradley1013/dragondown/raw/master/man/figures/dragondown.png" height="120"/>](https://github.com/tbradley1013/dragondown)
+[<img src="https://github.com/JobNmadu/Dyn4cast/blob/master/man/figures/logo.png" height="120"/>](https://github.com/JobNmadu/Dyn4cast)
 [<img src="https://github.com/calcita/ech/blob/master/man/figures/ech_logo.png" height="120"/>](https://github.com/calcita/ech)
 [<img src="https://github.com/Waller-SUSAN/envi/blob/master/man/figures/envi.png" height="120"/>](https://github.com/Waller-SUSAN/envi)
 [<img src="https://github.com/avkarandikar/eparlibscrapR/man/figures/logo.png" height="120"/>](https://github.com/avkarandikar/eparlibscrapR)
